test/static/bad/missing_token_alias.exp
File "missing_token_alias.mly", line 3, characters 12-15:
Error: no alias has been defined for the token INT.
File "missing_token_alias.mly", line 10, characters 7-10:
Error: no alias has been defined for the token EOL.
